# poolparty

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
include/poolparty/: pool.hpp  pool.inl
tests/: CMakeLists.txt  basic.test.cpp  priority.test.cpp
